--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,15 @@
 # Base configs
-baseurl: "https://photography.rampatra.com"
 image_fulls_loc: "/images/fulls"
-image_thumbs_loc: "/images/thumbs"
+image_thumbs_loc: "/images/fulls"
 google_analytics: "UA-46465113-2"
 
 # UI configs
-title: "Photography by Ram Patra"
-subtitle: "See the world through my eyes!"
-author: "Ram Patra"
+title: "אריאל ונתאי – צילום"
+subtitle: "תיקיית תמונות לדוגמה"
+author: "אריאל ונתאי"
 header:
- title: "Photography"
- subtitle: "by Ram Patra"
+ title: "אריאל ונתאי"
+ subtitle: "תיקיית תמונות לדוגמה"
 footer:
  name: "Hey there, my name is Ram"
  bio: "I am a developer and a tech aficionado from India. Love making teeny tiny apps solving tiny problems in life and now learning photography."
